fix bottom spacing with tags

--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -448,6 +448,7 @@ body {
     right: $log-spacing * 1;
     text-align: right;
     padding-left: 3rem;
+    margin-bottom: -0.25rem;
 
     .tag {
       display: inline-block;
